--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -6,6 +6,9 @@
         "options": {
             "main": {
                 "Title": "Pàgina principal"
+            },
+            "login": {
+                "Title": "Iniciar sessió"
             }
         }
     },
