--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -7,9 +7,20 @@
             "main": {
                 "Title": "Pàgina principal"
             },
-            "login": {
-                "Title": "Iniciar sessió"
+            "auth": {
+                "Title": "Compte",
+                "login": {
+                    "Title": "Iniciar sessió"
+                },
+                "signup": {
+                    "Title": "Crear compte"
+                }
             }
+        }
+    },
+    "view": {
+        "login": {
+            "Title": "Iniciar sessió"
         }
     },
     "errors": {
