--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -24,13 +24,21 @@
         }
     },
     "errors": {
-        "404": {
-            "Title": "No s'ha trobat la pàgina",
-            "Subtitle": "La pàgina a la que vols accedir-hi no s'ha trobat o no està disponible"
+        "frontend": {
+            "404": {
+                "Title": "No s'ha trobat la pàgina",
+                "Subtitle": "La pàgina a la que vols accedir-hi no s'ha trobat o no està disponible"
+            },
+            "403": {
+                "Title": "No pots accedir a la pàgina",
+                "Subtitle": "Per poder accedir a aquesta pàgina necessites estar autenticat"
+            }
         },
-        "unauthenticated": {
-            "Title": "No pots accedir a la pàgina",
-            "Subtitle": "Per poder accedir a aquesta pàgina necessites estar autenticat"
+        "auth": {
+            "404": {
+                "Title": "Usuari no trobat",
+                "Message": "L'usuari proporcionat no s'ha trobat al sistema."
+            }
         }
     },
     "common": {
