--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -38,6 +38,10 @@
             "404": {
                 "Title": "Usuari no trobat",
                 "Message": "L'usuari proporcionat no s'ha trobat al sistema."
+            },
+            "403": {
+                "Title": "Credencials fallides",
+                "Message": "Les credencials proporcionades no són correctes."
             }
         }
     },
