--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -48,7 +48,8 @@
     "common": {
         "form": {
             "Username": "Nom d'usuari",
-            "Password": "Contrasenya"
+            "Password": "Contrasenya",
+            "RememberMe": "Recorda'm"
         },
         "actions": {
             "Login": "Iniciar sessió",
