User requester and logout

--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -53,7 +53,8 @@
         },
         "actions": {
             "Login": "Iniciar sessió",
-            "Reset": "Esborrar"
+            "Reset": "Esborrar",
+            "Logout": "Tancar sessió"
         }
     }
 }
