Basic register form

--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -21,6 +21,9 @@
     "view": {
         "login": {
             "Title": "Iniciar sessió"
+        },
+        "signup": {
+            "Title": "Crear un compte"
         }
     },
     "errors": {
