Base form fields

--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -61,7 +61,11 @@
                 "Okay": "Acceptable",
                 "Good": "Bona",
                 "Strong": "Forta"
-            }
+            },
+            "Name": "Nom",
+            "LastName": "Cognom",
+            "Email": "Correu electrònic",
+            "Phone": "Telèfon"
         },
         "actions": {
             "Login": "Iniciar sessió",
