Base logs table display

--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -7,6 +7,9 @@
             "main": {
                 "Title": "Pàgina principal"
             },
+            "logs": {
+                "Title": "Veure logs"
+            },
             "auth": {
                 "Title": "Compte",
                 "login": {
@@ -25,6 +28,21 @@
         "signup": {
             "Title": "Crear un compte",
             "AcceptPP": "He llegit i accepto les"
+        },
+        "logs": {
+            "table": {
+                "columns": {
+                    "Id": "Id",
+                    "User": "Usuari",
+                    "Action": "Acció",
+                    "Date": "Data",
+                    "Ip": "Adreça IP",
+                    "actions": {
+                        "login": "Inici de sessió",
+                        "register": "Creació de compte"
+                    }
+                }
+            }
         }
     },
     "errors": {
