--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -141,7 +141,8 @@
             "Ok": "Ok",
             "Done": "Fet",
             "Cancel": "Cancel·lar",
-            "Exit": "Sortir"
+            "Exit": "Sortir",
+            "ChangeProfileImage": "Modificar avatar"
         },
         "other": {
             "privacyPolicy": "polítiques de privacitat"
