--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -1,4 +1,8 @@
 {
+    "languages": {
+        "ca": "Català",
+        "es": "Espanyol"
+    },
     "actions": {
         "GoHome": "Torna a la pàgina principal"
     },
@@ -18,6 +22,9 @@
                 "signup": {
                     "Title": "Crear compte"
                 }
+            },
+            "lang": {
+                "Title": "Idioma"
             }
         }
     },
