--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -60,6 +60,9 @@
                     "UpdatePassword": "Modificar contrasenya"
                 }
             }
+        },
+        "languageSelector": {
+            "Title": "Selector d'idioma"
         }
     },
     "errors": {
