--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -25,6 +25,12 @@
             },
             "lang": {
                 "Title": "Idioma"
+            },
+            "admin": {
+                "Title": "Administrar"
+            },
+            "users": {
+                "Title": "Usuaris"
             }
         }
     },
