User list (more details)

--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -73,10 +73,13 @@
         "userAdmin": {
             "userTable": {
                 "headers": {
+                    "Avatar": "Avatar",
                     "Id": "Id",
+                    "Login": "login",
                     "Name": "Nom",
                     "Email": "Correu electrònic",
-                    "DeletedAt": "Esborrat el"
+                    "DeletedAt": "Esborrat el",
+                    "CreatedAt": "Creat el"
                 },
                 "filters": {
                     "NeverDeleted": "No esborrats",
