--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -31,6 +31,9 @@
             },
             "users": {
                 "Title": "Usuaris"
+            },
+            "inventory": {
+                "Title": "Inventari"
             }
         }
     },
