--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -101,6 +101,25 @@
                     "SureToUnban": "Segur que vols desbloquejar l'usuari?"
                 }
             }
+        },
+        "inventory": {
+            "list": {
+                "headers": {
+                    "Id": "Id",
+                    "Name": "Nom",
+                    "Price": "Preu",
+                    "Stock": "Stock",
+                    "Discount": "Descompte",
+                    "Description": "Descripció",
+                    "Actions": "Accions"
+                },
+                "actions": {
+                    "Delete": "Esborrar",
+                    "Recover": "Recuperar",
+                    "SureToDelete": "Segur que vols esborrar l'ítem?",
+                    "SureToRecover": "Segur que vols recuperar l'ítem?"
+                }
+            }
         }
     },
     "errors": {
