Image on item list

--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -113,7 +113,8 @@
                     "Description": "Descripció",
                     "Actions": "Accions",
                     "DeletedAt": "Esborrat el",
-                    "Image": "URL de la imatge"
+                    "ImageUrl": "URL de la imatge",
+                    "Image": "Imatge"
                 },
                 "actions": {
                     "Delete": "Esborrar",
