--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -34,6 +34,9 @@
             },
             "inventory": {
                 "Title": "Inventari"
+            },
+            "payments": {
+                "Title": "Pagaments"
             }
         }
     },
