--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -131,6 +131,17 @@
                     "Deleted": "Esborrat"
                 }
             }
+        },
+        "paymentsAdmin": {
+            "list": {
+                "headers": {
+                    "Id": "Id",
+                    "Amount": "Quantitat",
+                    "CreatedAt": "Creat el",
+                    "User": "Usuari",
+                    "Last4Card": "4 dígits de la tarjeta"
+                }
+            }
         }
     },
     "errors": {
