--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -71,6 +71,11 @@
                     "NewPasswordAgain": "Repeteix la nova contrasenya",
                     "UpdatePassword": "Modificar contrasenya"
                 }
+            },
+            "sessionHistory": {
+                "card": {
+                    "Message": "Coneix amb detall les sessions que s'han obert amb el teu compte al llarg de l'existència del teu compte. Fes servir les alertes i recomanacions per tal de descobrir activitats sospitoses que poden posar en perill la seguretat del compte. Pots actuar sobre les sessions que semblen sospitoses."
+                }
             }
         },
         "languageSelector": {
