--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -257,7 +257,8 @@
             "Add": "Afegir"
         },
         "other": {
-            "privacyPolicy": "polítiques de privacitat"
+            "privacyPolicy": "polítiques de privacitat",
+            "Timezone": "Zona horaria"
         }
     }
 }
