--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -38,8 +38,8 @@
             "payments": {
                 "Title": "Pagaments"
             },
-            "diskBuilder": {
-                "Title": "Crear disc"
+            "diskRequest": {
+                "Title": "Sol·licitar disc"
             }
         }
     },
