--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -168,6 +168,9 @@
                 "send": "Métode d'enviament",
                 "payment": "Pagament",
                 "sent": "Enviat"
+            },
+            "tabs": {
+                "Tab": "Pàgina"
             }
         }
     },
