--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -171,6 +171,10 @@
             },
             "tabs": {
                 "Tab": "Pàgina"
+            },
+            "form": {
+                "Amount": "Quantitat",
+                "Items": "Ítems"
             }
         }
     },
