Final price display

--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -183,6 +183,9 @@
                     "actions": {
                         "FinishBuild": "Finalitzar personalització del disc",
                         "SavePage": "Desar pàgina"
+                    },
+                    "messages": {
+                        "FinalPrice": "Preu total"
                     }
                 }
             }
