--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -186,6 +186,10 @@
                     },
                     "messages": {
                         "FinalPrice": "Preu total"
+                    },
+                    "titles": {
+                        "Available": "Disponible",
+                        "Selected": "Seleccionat"
                     }
                 }
             }
