Summary with amount

--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -177,12 +177,14 @@
                 "table": {
                     "headers": {
                         "Name": "Nom",
-                        "Price": "Preu"
+                        "Price": "Preu",
+                        "Amount": "Quantitat"
                     }
                 }
             },
             "step": {
                 "build": {
+                    "NextBtn": "Següent (enviament)",
                     "form": {
                         "Amount": "Quantitat",
                         "Items": "Ítems",
