Base address selector

--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -201,6 +201,13 @@
                         "Available": "Disponible",
                         "Selected": "Seleccionat"
                     }
+                },
+                "send": {
+                    "form": {
+                        "Country": "Pais",
+                        "City": "Ciutat",
+                        "PostalCode": "Codi postal"
+                    }
                 }
             }
         }
