--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -203,6 +203,7 @@
                     }
                 },
                 "send": {
+                    "NextBtn": "Següent (pagament)",
                     "form": {
                         "Country": "Pais",
                         "City": "Ciutat",
