--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -209,6 +209,11 @@
                         "City": "Ciutat",
                         "PostalCode": "Codi postal"
                     }
+                },
+                "pay": {
+                    "form": {
+                        "Card": "Targeta"
+                    }
                 }
             }
         }
