Base payment form

--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -212,7 +212,10 @@
                 },
                 "pay": {
                     "form": {
-                        "Card": "Targeta"
+                        "Card": "Targeta",
+                        "Owner": "Propietari",
+                        "Pin": "CVC/PIN",
+                        "ExpiresAt": "Expira el"
                     }
                 }
             }
