--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -212,6 +212,7 @@
                     }
                 },
                 "pay": {
+                    "NextBtn": "Pagar",
                     "form": {
                         "Card": "Targeta",
                         "Owner": "Propietari",
